tests/agl/rejections/scope/record_name_claimed_by_def.agl
record Widget
  x: int

def Widget() -> int
  1

print Widget()
